# vault2vault

./: .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE.md  Makefile  README.md  pyproject.toml  tox.ini  vault2vault.py
.github/scripts/: setup-env.sh
.github/workflows/: ci.yaml
tests/: test_metadata.py
