[tool.poetry]
name = "vault2vault"
version = "0.1.0"
license = "MIT"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
description = "Recursively rekey ansible-vault encrypted files and in-line variables"
repository = "https://github.com/enpaul/vault2vault/"
packages = [
  {include = "vault2vault.py"},
  {include = "tests/*.py", format = "sdist"}
]
keywords = ["ansible", "vault", "playbook", "yaml", "password"]
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: Ansible",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Systems Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry.scripts]
vault2vault = "vault2vault:main"

[tool.poetry.extras]
ansible = ["ansible-core"]

[tool.poetry.dependencies]
python = "^3.6.1"
"ruamel.yaml" = "^0.17.16"
ansible-core = {version = "^2.11.5", optional = true}

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = { version = "^21.9b0", allow-prereleases = true, python = "^3.7" }
blacken-docs = "^1.8.0"
ipython = { version = "^7.18.1", python = "^3.7" }
mypy = "^0.800"
pre-commit = "^2.7.1"
pre-commit-hooks = "^3.3.0"
pylint = "^2.4.4"
pytest = "^6.0.2"
pytest-cov = "^2.10.1"
reorder-python-imports = "^2.3.5"
safety = "^1.9.0"
toml = "^0.10.1"
tox = "^3.20.0"
tox-poetry-installer = { version = "^0.8.1", extras = ["poetry"] }
types-toml = "^0.10.4"
mdformat = "^0.6.4"
mdformat-gfm = "^0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
