[tool.poetry]
name = "vault2vault"
version = "0.1.3"
license = "MIT"
authors = ["Ethan Paul <24588726+enpaul@users.noreply.github.com>"]
description = "Recursively rekey ansible-vault encrypted files and in-line variables"
repository = "https://github.com/enpaul/vault2vault/"
packages = [
  {include = "vault2vault.py"},
  {include = "tests/*.py", format = "sdist"}
]
keywords = ["ansible", "vault", "playbook", "yaml", "password"]
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Ansible",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython"
]

[tool.poetry.scripts]
vault2vault = "vault2vault:main"

[tool.poetry.extras]
ansible = ["ansible-core"]

[tool.poetry.dependencies]
python = "^3.7"
"ruamel.yaml" = "^0.17.16"
ansible-core = {version = "^2.11.5", optional = true}

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", python = "^3.10"}
blacken-docs = {version = "^1.13.0", python = "^3.10"}
ipython = {version = "^8.10.1", python = "^3.10"}
mdformat = {version = "^0.7.16", python = "^3.10"}
mdformat-gfm = {version = "^0.3.5", python = "^3.10"}
mypy = {version = "^1.1.1", python = "^3.10"}
pre-commit = {version = "^2.7.1", python = "^3.10"}
pre-commit-hooks = {version = "^3.3.0", python = "^3.10"}
pylint = {version = "^2.4.4", python = "^3.10"}
reorder-python-imports = {version = "^2.3.5", python = "^3.10"}
types-toml = {version = "^0.10.4", python = "^3.10"}
# Implicit python version check fails for this one
packaging = {version = "^23.0", python = "^3.10"}

[tool.poetry.group.security.dependencies]
bandit = {version = "^1.6.2", python = "^3.10"}
safety = {version = "^2.2.0", python = "^3.10"}
poetry = {version = "^1.2.0", python = "^3.10"}

[tool.poetry.group.test.dependencies]
pytest = {version = "^6.0.2"}
pytest-cov = {version = "^2.10.1"}
toml = {version = "^0.10.1"}
typing-extensions = {version = "^4.5.0", python = "^3.8"}

[tool.poetry.group.ci.dependencies]
tox = {version = "^3.20.0"}
tox-poetry-installer = {version = "^0.10.1", extras = ["poetry"]}
# This doesn't get installed under py3.7 for some reason, but it's
# required for poetry. Will need to debug this more in the future
backports-cached-property = "^1.0.2"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
